Added pages for project

--- a/css/main.css
+++ b/css/main.css
@@ -161,6 +161,8 @@ table {
 }
 
 #header > li a {
+    display: block;
+    width: 100%;
     font-size: 20px;
     text-decoration: none;
     color: white;
